    * 1447 domino_transactions: new check to monitor the number of transactions per minute on Lotus Domino servers
    * 1190 statgrab_cpu: Check can now handle parameters
    * 1191 Linux agent now also sends information about tmpfs...
    * 1424 mknotifyd: now able to check if its still listening for telegrams...
    * 1051 FIX: tcp_conn_stats: fix missing performance data...
    * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
    * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
    * 0187 FIX: hp_proliant_power: Fixed Wato configuration
    * 0192 FIX: oracle_rman_backups: Not longer try to make a inventory for broken plugin outputs
    * 0194 FIX: raritan_pdu_inlet: Check now outputs the correct values...
            NOTE: Please refer to the migration notes!
    * 1071 FIX: oracle_rman_backups: Only inventorize ARCHIVELOG / DB FULL / DB INCR entries...
    * 1152 FIX: mk-job: The check now captures currently running jobs and their start time...
    * 0198 FIX: cisco_temp_sensor: Removed dicey detection for temperature value....
    * 0645 FIX: brocade_fcport: since in newer firmware (7.*) swFCPortSpeed is deprecated, we then calculate port speed from IF-MIB::ifHighSpeed
    * 1097 FIX: windows_agent: preventing missing agent sections on first query...
    * 1009 FIX: df: deal with space in file system type for PlayStation file system...
    * 1098 FIX: esx_vsphere_counters.diskio: Now reports unknown when counter data is missing
    * 1143 FIX: dell_powerconnect_temp: fix configuration via WATO...
    * 1144 FIX: blade_bx_temp, dell_chassis_temp, emerson_temp, ibm_svc_enclosurestats, ups_bat_temp: rename service description...
            NOTE: Please refer to the migration notes!
    * 1145 FIX: windows_tasks: handle case correctly where task is currently running...
    * 1378 FIX: mk_logwatch: remove exceeding \n when rewriting message and using \0...