@@ -80,6 +80,7 @@
     * 1190 statgrab_cpu: Check can now handle parameters
     * 1191 Linux agent now also sends information about tmpfs...
     * 1424 mknotifyd: now able to check if its still listening for telegrams...
+    * 1193 ps: Manual Checks can now use RegEx for user matching...
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
